# fastapi-rbac-scaffold

./: .gitignore  AGENTS.md  FASTAPI_SCAFFOLD_DESIGN.md  LICENSE  RBAC.md  README.md  pyproject.toml
src/fastapi_rbac_scaffold/: __init__.py  py.typed
src/fastapi_rbac_scaffold/cli/: main.py
src/fastapi_rbac_scaffold/generator/: __init__.py  project.py
src/fastapi_rbac_scaffold/templates/: __init__.py
src/fastapi_rbac_scaffold/templates/fastapi_app/: .env.example  .gitignore  .template-root  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/fastapi_rbac_scaffold/templates/fastapi_app/app/: __init__.py  main.py
src/fastapi_rbac_scaffold/templates/fastapi_app/app/api/: __init__.py  health.py
src/fastapi_rbac_scaffold/templates/fastapi_app/app/cli/: __init__.py  bootstrap.py  seed_iam.py
src/fastapi_rbac_scaffold/templates/fastapi_app/app/config/: logging.py  settings.py
src/fastapi_rbac_scaffold/templates/fastapi_app/app/core/: database.py  errors.py  pagination.py  redis.py  tracing.py
src/fastapi_rbac_scaffold/templates/fastapi_app/app/middleware/: auth_middleware.py  request_context.py  tenant_context.py
src/fastapi_rbac_scaffold/templates/fastapi_app/app/model/: __init__.py  base.py
src/fastapi_rbac_scaffold/templates/fastapi_app/app/schema/: __init__.py  base.py  response.py
src/fastapi_rbac_scaffold/templates/fastapi_app/app/security/: jwt.py  password.py  permission.py
src/fastapi_rbac_scaffold/templates/fastapi_app/migrations/: env.py
tests/: test_generator.py
(+35 files in other folders)
